python/test-data/testLockFactory.err
Traceback (most recent call last):
  File "test-data/testLockFactory.py", line 15, in <module>
    foo("not a lock")
WyppTypeError: got value of wrong type
given:    'not a lock'
expected: value of type Callable[[], LockLike]

context: foo(lock: LockFactory) -> None
                   ^^^^^^^^^^^
declared at: test-data/testLockFactory.py:6
caused by: test-data/testLockFactory.py:15
  | foo("not a lock")
